<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.7"
        android:background="@color/result_background">

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/history_sample"
            android:textSize="20dp"
            android:textColor="@color/number_button_color"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.1"
        android:background="@color/divider_color">
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3"
        android:background="@color/result_background">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|right"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:text="@string/result_sample"
            android:textSize="60dp"
            android:textColor="@color/result_number_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:background="@color/number_pads">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:textSize="@dimen/operator_text_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/plus_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plus_minus"
                android:textSize="@dimen/operator_text_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/percentage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/percentage"
                android:textSize="@dimen/operator_text_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/operator_pads">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/divide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:textSize="@dimen/operator_text_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:background="@color/number_pads">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:textSize="@dimen/numbers_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:textSize="@dimen/numbers_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:textSize="@dimen/numbers_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/operator_pads">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:textSize="@dimen/operator_text_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:background="@color/number_pads">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:textSize="@dimen/numbers_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:textSize="@dimen/numbers_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:textSize="@dimen/numbers_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/operator_pads">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:textSize="@dimen/operator_text_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:background="@color/number_pads">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:textSize="@dimen/numbers_size"
                android:textColor="@color/number_button_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:textSize="@dimen/numbers_size"
                android:textColor="@color/number_button_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:textSize="@dimen/numbers_size"
                android:textColor="@color/number_button_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/operator_pads">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:textSize="@dimen/operator_text_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:background="@color/number_pads">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/answer"
                android:textSize="@dimen/operator_text_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:textSize="@dimen/numbers_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/dot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:textSize="@dimen/operator_text_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/equal">

            <Button
                android:background="@android:color/transparent"
                android:id="@+id/equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/equal"
                android:textSize="@dimen/operator_text_size"
                android:textColor="@color/number_button_color"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>